src/test/ui/impl-trait/issue-60473.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/issue-60473.rs:13:23
   |
LL |     let x: impl Trait<A> = ();
   |                       ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL | fn main<'a>() {
LL |     let x: impl Trait<A<'a>> = ();
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
